@@ -1,3 +1,9 @@
+bubba-frontend (1.2.4.20) claire estelle; urgency=low
+
+  * only use single call to set interface 
+
+ -- Carl Fürstenberg <carl@excito.com>  Tue, 05 Jan 2010 17:09:56 +0100
+
 bubba-frontend (1.2.4.19) claire estelle; urgency=low
 
   [ Carl Fürstenberg ]
